--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	>
 		<p>
 			Your browser does not support PDFs.
-			<a href="Aditya_Routh_Resume.pdf">Download the PDF</a>.
+			<a href="Resume_Aditya_Routh.pdf">Download the PDF</a>.
 		</p>
 	</object>
 </body>
