--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
 	<object
-		data="Aditya_Routh_Resume.pdf#page=1"
+		data="Resume_Aditya_Routh.pdf#page=1"
 		type="application/pdf"
 		width="100%"
 		height="100%"
